Escrevendo no conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Cursos de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex provident omnis consectetur, iste animi quidem minus sint dolorum vitae expedita deleniti repellat, voluptatem veniam adipisci, ipsa sit voluptas aperiam eligendi!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus cupiditate aperiam quidem corrupti praesentium doloribus minus sunt. Odio dolores, odit sed officia quisquam provident placeat cupiditate, animi corporis sit saepe.</p>
         </article>
     </main>
 </body>
