--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Site</title>
+    <title>Site este</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Site este</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
             <h2>Cursos de HTML5 com CSS3</h2>
